--- a/app/parts/header.html
+++ b/app/parts/header.html
@@ -1,42 +1,70 @@
 <header class="header">
   <div class="header__container __header-container">
     <div class="header__logo">
-      <img src="../img/src/header_logo.jpg" alt="Drella insurance" />
-      <nav class="header__menu nav-menu">
-        <ul class="menu__list">
-          <li class="nav-menu__item">Our Plan</li>
-          <li class="nav-menu__item">Employers</li>
-          <li class="nav-menu__item">Brokers</li>
-          <li class="nav-menu__item">Members</li>
-          <li class="nav-menu__item">About</li>
-          <li class="nav-menu__item">Blog</li>
+      <a href="#">
+        <img src="../img/src/header_logo.jpg" alt="Drella insurance" />
+      </a>
+    </div>
+    <div class="header__navigation">
+      <nav class="header__menu nav-menu" id="mainMenu">
+        <ul class="nav-menu__list">
+          <li class="nav-menu__item">
+            <a href="#" class="nav-menu__link">Our Plan</a>
+          </li>
+          <li class="nav-menu__item">
+            <a href="#" class="nav-menu__link">Employers</a>
+          </li>
+          <li class="nav-menu__item">
+            <a href="#" class="nav-menu__link">Brokers</a>
+          </li>
+          <li class="nav-menu__item">
+            <a href="#" class="nav-menu__link">Members</a>
+          </li>
+          <li class="nav-menu__item">
+            <a href="#" class="nav-menu__link">About</a>
+          </li>
+          <li class="nav-menu__item">
+            <a href="#" class="nav-menu__link">Blog</a>
+          </li>
         </ul>
       </nav>
       <div class="header__request-btn btn">
         <a href="#" class="btn__link">Request a demo</a>
       </div>
-      <div class="header__menu menu">
-        <a hrfe="#" class="menu__link"><span>Login</span></a>
-        <ul class="sub-menu__list">
+
+      <div class="header__login-menu menu">
+        <ul class="menu__list">
           <li>
-            <div class="sub-menu__link">login item 1</div>
-          </li>
-          <li>
-            <div class="sub-menu__link">login item 2</div>
+            <a href="#" class="menu__link">Login</a>
+            <span class="menu__arrow arrow"></span>
+            <ul class="sub-menu__list">
+              <li>
+                <a href="#" class="sub-menu__link">login item 1</a>
+              </li>
+              <li>
+                <a href="#" class="sub-menu__link">login item 2</a>
+              </li>
+            </ul>
           </li>
         </ul>
       </div>
-      <div class="header__language language">
-        <a href="#" class="language__link">
-          <ul class="language__list">
-            <li>
-              <div class="language__link">EN</div>
-            </li>
-            <li>
-              <div class="language__link">FR</div>
-            </li>
-          </ul>
-        </a>
+      <div class="header__language menu">
+        <ul class="menu__list">
+          <li>
+            <a href="#" class="menu__link">en</a>
+            <ul class="sub-menu__list">
+              <li>
+                <a href="#" class="sub-menu__link">en</a>
+              </li>
+              <li>
+                <a href="#" class="sub-menu__link">fr</a>
+              </li>
+            </ul>
+          </li>
+        </ul>
+      </div>
+      <div class="header__burger" id="burger">
+        <span></span>
       </div>
     </div>
   </div>
