--- a/app/index.html
+++ b/app/index.html
@@ -33,6 +33,13 @@
     <link rel="manifest" href="./site.webmanifest" />
     <!-- <meta property="og:image" content="images/dist/preview.jpg" /> -->
 
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700;900&family=Roboto:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+
     <link rel="stylesheet" href="./css/main.min.css" />
   </head>
 
