--- a/app/parts/footer.html
+++ b/app/parts/footer.html
@@ -1,1 +1,86 @@
-<footer class="footer">Footer</footer>
+<footer class="footer">
+  <div class="footer__container __container">
+    <div class="footer__body">
+      <div class="footer__logo">
+        <img src="../img/src/footer_logo.png" alt="Brella insurance" />
+      </div>
+      <div class="footer__navigation nav-footer">
+        <div class="nav-footer__row">
+          <div class="nav-footer__column">
+            <div class="nav-footer__title">Join Brella</div>
+            <ul class="nav-footer__list">
+              <li class="nav-footer__list-item"><a href="#">Our Plan</a></li>
+              <li class="nav-footer__list-item"><a href="#">Employers</a></li>
+              <li class="nav-footer__list-item"><a href="#">Brokers</a></li>
+              <li class="nav-footer__list-item"><a href="#">Members</a></li>
+            </ul>
+          </div>
+          <div class="nav-footer__column">
+            <div class="nav-footer__title">Company</div>
+            <ul class="nav-footer__list">
+              <li class="nav-footer__list-item"><a href="#">About</a></li>
+              <li class="nav-footer__list-item"><a href="#">Blog</a></li>
+              <li class="nav-footer__list-item"><a href="#">Careers</a></li>
+              <li class="nav-footer__list-item"><a href="#">Contact</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="footer__contacts contacts">
+        <div class="contacts__title">Get the latest</div>
+        <div class="contacts__text">
+          Sign up to receive benefits news and insights in your inbox once a
+          month.
+        </div>
+        <form class="contacts__form" onsubmit="(e) => {e.prevntDefault()}">
+          <input type="email" class="contacts__input" placeholder="Email*" />
+          <input type="submit" class="contacts__btn" value="" />
+        </form>
+        <div class="contacts__social social">
+          <div class="social__icon">
+            <img src="../img/src/icon_linkedin.png" alt="Linkedin" />
+          </div>
+          <div class="social__icon">
+            <img src="../img/src/icon_tviter.png" alt="Twitter" />
+          </div>
+          <div class="social__icon">
+            <img src="../img/src/icon_youtube.png" alt="Youtube" />
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="footer__text">
+      <p>
+        Brella is a limited benefit policy; it is not a substitute for health
+        insurance. The information provided on this website is illustrative
+        only. A complete description of benefits, limitations, and exclusions
+        are provided in your certificate of Insurance and applicable Riders. For
+        a summary of limitations and exclusions, see our FAQ. Payout values
+        listed do not guarantee an amount to be paid for listed conditions.
+        Product not available in all states. All coverage is subject to the
+        terms and conditions of the master group policy.
+      </p>
+      <p>
+        Brella is underwritten by Greenhouse Life Insurance Company (NAIC
+        80055). Form No. PFSB11-TX
+      </p>
+      <p>
+        Reach us by mail at 2093 Philadelphia Pike #2496, Claymont, DE 19703 and
+        by phone at
+        <a class="footer__text-phone" href="tel:8449871070">(844) 987-1070</a>
+      </p>
+    </div>
+    <div class="footer__copyright">
+      <div class="footer__copyright-text">
+        © 2021 Brella Insurance Inc.<br />
+        All Rights Reserved.
+      </div>
+      <div class="footer__copyright-links">
+        <div class="footer__copyright-link"><a href="#">Privacy</a></div>
+        <div class="footer__copyright-link">
+          <a href="#">Terms of Service</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</footer>
