--- a/app/index.html
+++ b/app/index.html
@@ -46,7 +46,9 @@
   <body>
     <div class="wraper">
       <!--#include virtual="/parts/header.html" -->
-      <!--#include virtual="/parts/main.html" -->
+      <main class="page">
+        <!--#include virtual="/parts/intro.html" -->
+      </main>
       <!--#include virtual="/parts/footer.html" -->
     </div>
     <script src="js/app.min.js"></script>
