section why done

--- a/app/index.html
+++ b/app/index.html
@@ -48,6 +48,7 @@
       <!--#include virtual="/parts/header.html" -->
       <main class="page">
         <!--#include virtual="/parts/intro.html" -->
+        <!--#include virtual="/parts/why.html" -->
       </main>
       <!--#include virtual="/parts/footer.html" -->
     </div>
