changed img src

--- a/app/index.html
+++ b/app/index.html
@@ -49,6 +49,7 @@
       <main class="page">
         <!--#include virtual="/parts/intro.html" -->
         <!--#include virtual="/parts/why.html" -->
+        <!--#include virtual="/parts/advantage.html" -->
       </main>
       <!--#include virtual="/parts/footer.html" -->
     </div>
