--- a/app/parts/footer.html
+++ b/app/parts/footer.html
@@ -2,7 +2,7 @@
   <div class="footer__container __container">
     <div class="footer__body">
       <div class="footer__logo">
-        <img src="../img/src/footer_logo.png" alt="Brella insurance" />
+        <img src="../img/dist/footer_logo.png" alt="Brella insurance" />
       </div>
       <div class="footer__navigation nav-footer">
         <div class="nav-footer__row">
@@ -38,13 +38,13 @@
         </form>
         <div class="contacts__social social">
           <div class="social__icon">
-            <img src="../img/src/icon_linkedin.png" alt="Linkedin" />
+            <img src="../img/dist/icon_linkedin.png" alt="Linkedin" />
           </div>
           <div class="social__icon">
-            <img src="../img/src/icon_tviter.png" alt="Twitter" />
+            <img src="../img/dist/icon_tviter.png" alt="Twitter" />
           </div>
           <div class="social__icon">
-            <img src="../img/src/icon_youtube.png" alt="Youtube" />
+            <img src="../img/dist/icon_youtube.png" alt="Youtube" />
           </div>
         </div>
       </div>
