--- a/app/parts/header.html
+++ b/app/parts/header.html
@@ -2,7 +2,7 @@
   <div class="header__container __header-container">
     <div class="header__logo">
       <a href="#">
-        <img src="../img/src/header_logo.jpg" alt="Drella insurance" />
+        <img src="../img/dist/header_logo.jpg" alt="Drella insurance" />
       </a>
     </div>
     <div class="header__navigation">
