--- a/app/parts/why.html
+++ b/app/parts/why.html
@@ -4,7 +4,7 @@
       <div class="pluses__row">
         <div class="pluses__column">
           <img
-            src="../img/src/icon_umbrella.png"
+            src="../img/dist/icon_umbrella.png"
             alt="More coverage"
             class="pluses__img"
             width="41px"
@@ -20,7 +20,7 @@
         </div>
         <div class="pluses__column">
           <img
-            src="../img/src/icon_check.png"
+            src="../img/dist/icon_check.png"
             alt="Less hassle"
             class="pluses__img"
             width="41px"
@@ -36,7 +36,7 @@
         </div>
         <div class="pluses__column">
           <img
-            src="../img/src/icon_purse.png"
+            src="../img/dist/icon_purse.png"
             alt="Faster benefits"
             class="pluses__img"
             width="58px"
