advantage section done

--- a/app/parts/advantage.html
+++ b/app/parts/advantage.html
@@ -1,25 +1,113 @@
-<div class="page__advantage advantage">
+<section class="page__advantage advantage">
   <div class="advantage__container __container">
     <div class="advantage__body">
       <div class="advantage__question">brella brings</div>
       <ul class="advantage__tabs tabs">
         <li class="tabs__tab active">
-          <a href="" class="tabs__link __target-tab-1">Customizable benefits</a>
+          <a href="#tab-1" class="tabs__link __target-tab-1">
+            Customizable benefits
+          </a>
+        </li>
+        <li class="tabs__tab">
+          <a href="#tab-2" class="tabs__link __target-tab-2">
+            Paperless install & admin
+          </a>
+        </li>
+        <li class="tabs__tab">
+          <a href="#tab-3" class="tabs__link __target-tab-3">
+            Effortless enrollment
+          </a>
+        </li>
+        <li class="tabs__tab">
+          <a href="#tab-4" class="tabs__link __target-tab-4">
+            Easy claims experience
+          </a>
+        </li>
+        <li class="tabs__tab">
+          <a href="#tab-5" class="tabs__link __target-tab-5">
+            Fast benefit payouts
+          </a>
+        </li>
+        <li class="tabs__tab">
+          <a href="#tab-6" class="tabs__link __target-tab-6">
+            Concierge support
+          </a>
         </li>
       </ul>
     </div>
     <div class="advantage__item-box">
-      <div class="tabs__item" data-move="__target-tab-1,1,960">
+      <div id="tab-1" class="tabs__item active" data-move="__target-tab-1,1,960">
         <p>
           Every Brella plan comes with a benefit for Moderate, Severe, and
           Catastrophic conditions. Employees can select the payout amounts that
           fit their needs and their budget.
+        </p>
+        <p style="text-align: center">1</p>
+        <p>
+          Employers can fund part or all of the premiums—or offer Brella as a
+          voluntary benefit. The choice is up to you.
+        </p>
+      </div>
+      <div id="tab-2" class="tabs__item" data-move="__target-tab-2,1,960">
+        <p>
+          Every Brella plan comes with a benefit for Moderate, Severe, and
+          Catastrophic conditions. Employees can select the payout amounts that
+          fit their needs and their budget.
+        </p>
+        <p style="text-align: center">2</p>
+        <p>
+          Employers can fund part or all of the premiums—or offer Brella as a
+          voluntary benefit. The choice is up to you.
+        </p>
+      </div>
+      <div id="tab-3" class="tabs__item" data-move="__target-tab-3,1,960">
+        <p>
+          Every Brella plan comes with a benefit for Moderate, Severe, and
+          Catastrophic conditions. Employees can select the payout amounts that
+          fit their needs and their budget.
+        </p>
+        <p style="text-align: center">3</p>
+        <p>
+          Employers can fund part or all of the premiums—or offer Brella as a
+          voluntary benefit. The choice is up to you.
         </p>
         <p>
           Employers can fund part or all of the premiums—or offer Brella as a
           voluntary benefit. The choice is up to you.
         </p>
       </div>
+      <div id="tab-4" class="tabs__item" data-move="__target-tab-4,1,960">
+        <p>
+          Every Brella plan comes with a benefit for Moderate, Severe, and
+          Catastrophic conditions. Employees can select the payout amounts that
+          fit their needs and their budget.
+        </p>
+        <p style="text-align: center">4</p>
+        <p>
+          Employers can fund part or all of the premiums—or offer Brella as a
+          voluntary benefit. The choice is up to you.
+        </p>
+      </div>
+      <div id="tab-5" class="tabs__item" data-move="__target-tab-5,1,960">
+        
+        <p style="text-align: center">5</p>
+        <p>
+          Employers can fund part or all of the premiums—or offer Brella as a
+          voluntary benefit. The choice is up to you.
+        </p>
+      </div>
+      <div id="tab-6" class="tabs__item" data-move="__target-tab-6,1,960">
+        <p>
+          Every Brella plan comes with a benefit for Moderate, Severe, and
+          Catastrophic conditions. Employees can select the payout amounts that
+          fit their needs and their budget.
+        </p>
+        <p style="text-align: center">6</p>
+        <p>
+          Employers can fund part or all of the premiums—or offer Brella as a
+          voluntary benefit. The choice is up to you.
+        </p>
+      </div> 
     </div>
   </div>
 </div>
