palns section done

--- a/app/index.html
+++ b/app/index.html
@@ -50,6 +50,7 @@
         <!--#include virtual="/parts/intro.html" -->
         <!--#include virtual="/parts/why.html" -->
         <!--#include virtual="/parts/advantage.html" -->
+        <!--#include virtual="/parts/plans.html" -->
       </main>
       <!--#include virtual="/parts/footer.html" -->
     </div>
