--- a/app/parts/plans.html
+++ b/app/parts/plans.html
@@ -1,18 +1,20 @@
 <div class="page__plans plans">
   <div class="plans__container __container">
-    <div class="plans__info">
-      <div class="plans__info-body">
-        <div class="plans__info-pretitle">one plan, more coverage</div>
-        <div class="plans__info-title title">
+    <div class="plans__info info">
+      <div class="plans__info-body info__body">
+        <div class="plans__info-pretitle info__pretitle">
+          one plan, more coverage
+        </div>
+        <div class="plans__info-title info__title title">
           No one can predict which health issues might come their way.
         </div>
-        <div class="plans__info-text">
+        <div class="plans__info-text info__text">
           Our broad supplemental coverage gets rid of the guesswork and puts
           cash in your team’s pockets for most conditions that require urgent
           medical attention.
         </div>
       </div>
-      <div class="plans__info-img">
+      <div class="plans__info-img info__img">
         <img src="../img/dist/plan_coverage.jpg" alt="" />
       </div>
     </div>
