howitworks section done

--- a/app/index.html
+++ b/app/index.html
@@ -51,6 +51,7 @@
         <!--#include virtual="/parts/why.html" -->
         <!--#include virtual="/parts/advantage.html" -->
         <!--#include virtual="/parts/plans.html" -->
+        <!--#include virtual="/parts/howItWorts.html" -->
       </main>
       <!--#include virtual="/parts/footer.html" -->
     </div>
