employe section done

--- a/app/index.html
+++ b/app/index.html
@@ -52,6 +52,7 @@
         <!--#include virtual="/parts/advantage.html" -->
         <!--#include virtual="/parts/plans.html" -->
         <!--#include virtual="/parts/howItWorts.html" -->
+        <!--#include virtual="/parts/employe.html" -->
       </main>
       <!--#include virtual="/parts/footer.html" -->
     </div>
