slider section done

--- a/app/parts/employe.html
+++ b/app/parts/employe.html
@@ -1,4 +1,4 @@
-<div class="page__employe employe">
+<section class="page__employe employe">
   <div class="employe__container __container">
     <div class="employe__info info">
       <div class="employe__info-body info__body">
@@ -17,4 +17,4 @@
       <div class="employe__info-img info__img"></div>
     </div>
   </div>
-</div>
+</section>
