--- a/app/parts/plans.html
+++ b/app/parts/plans.html
@@ -1,4 +1,4 @@
-<div class="page__plans plans">
+<section class="page__plans plans">
   <div class="plans__container __container">
     <div class="plans__info info">
       <div class="plans__info-body info__body">
@@ -47,4 +47,4 @@
       </div>
     </div>
   </div>
-</div>
+</section>
