--- a/app/index.html
+++ b/app/index.html
@@ -39,7 +39,10 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700;900&family=Roboto:wght@400;700&display=swap"
       rel="stylesheet"
     />
-
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/swiper@7/swiper-bundle.min.css"
+    />
     <link rel="stylesheet" href="./css/main.min.css" />
   </head>
 
@@ -53,6 +56,7 @@
         <!--#include virtual="/parts/plans.html" -->
         <!--#include virtual="/parts/howItWorts.html" -->
         <!--#include virtual="/parts/employe.html" -->
+        <!--#include virtual="/parts/slider.html" -->
       </main>
       <!--#include virtual="/parts/footer.html" -->
     </div>
