featuring section done

--- a/app/index.html
+++ b/app/index.html
@@ -57,6 +57,7 @@
         <!--#include virtual="/parts/howItWorts.html" -->
         <!--#include virtual="/parts/employe.html" -->
         <!--#include virtual="/parts/slider.html" -->
+        <!--#include virtual="/parts/featuring.html" -->
       </main>
       <!--#include virtual="/parts/footer.html" -->
     </div>
