--- a/app/index.html
+++ b/app/index.html
@@ -58,6 +58,7 @@
         <!--#include virtual="/parts/employe.html" -->
         <!--#include virtual="/parts/slider.html" -->
         <!--#include virtual="/parts/featuring.html" -->
+        <!--#include virtual="/parts/letstalk.html" -->
       </main>
       <!--#include virtual="/parts/footer.html" -->
     </div>
